[package]
name = "odysseus-daemon"
version = "0.1.0"
edition = "2021"

default-run = "odysseus-daemon"

[dependencies]
socketcan = { version = "3.5.0", features = ["tokio"] }
reqwest = { version = "0.12.22", features = ["blocking", "multipart", "stream"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["full", "tracing"] }
chrono = { version = "0.4.42" }
protobuf = "3.7.1"
rumqttc = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = "0.37.0"
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }
regex = "1.11.3"
#serialport = "4.7.2"
tokio-serial = "5.4.5"

[build-dependencies]
protobuf-codegen = "3.7.1"
