[package]
name = "odysseus-daemon"
version = "0.1.0"
edition = "2021"

default-run = "odysseus-daemon"

[dependencies]
socketcan = { version = "3.5.0", features = ["tokio"] }
reqwest = { version = "0.12.24", features = ["blocking", "multipart", "stream"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
chrono = { version = "0.4.42" }
protobuf = "3.7.1"
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio-util = { version = "0.7.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }
regex = "1.12.2"
#serialport = "4.7.2"
tokio-serial = "5.4.5"

[build-dependencies]
protobuf-codegen = "3.7.1"
