[package]
name = "odysseus-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
default-run = "odysseus-daemon"

[dependencies]
socketcan = { version = "3.5.0", features = ["tokio"] }
reqwest = { version = "0.13.2", features = ["blocking", "multipart", "stream"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.52.1", features = ["full", "tracing"] }
chrono = { version = "0.4.42" }
protobuf = "3.7.1"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio-util = { version = "0.7.18", features = ["full"] }
tracing = "0.1.41"
gpsd_proto = { git = "https://github.com/Northeastern-Electric-Racing/gpsd_proto.git"}
futures-util = "0.3.31"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "env-filter"] }
regex = "1.12.3"
tokio-serial = "5.4.5"
palette = "0.7.6"
heapless = "0.9.2"

[build-dependencies]
protobuf-codegen = "3.7.1"
